# ai-cat-api

./: .dockerignore  .flake8  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml  stg-fly.toml
.github/workflows/: ci.yml  deploy-to-production.yml  deploy-to-staging.yml
docker/mysql/: Dockerfile
docker/mysql/config/: my.cnf
src/: main.py
src/domain/: cat.py  message.py  unique_id.py
src/domain/repository/: cat_message_repository_interface.py  guest_users_conversation_history_repository_interface.py  video_repository_interface.py  video_transcript_repository_interface.py
src/infrastructure/: db.py  logger.py  openai.py
src/infrastructure/google/: parse_gcs_path.py
src/infrastructure/repository/: cat_message_repository.py  guest_users_conversation_histories.py  guest_users_conversation_history_repository.py
src/infrastructure/repository/aiomysql/: aiomysql_db_handler.py  aiomysql_guest_users_conversation_history_repository.py
src/infrastructure/repository/gemini/: gemini_video_repository.py
src/infrastructure/repository/google/: google_video_transcript_repository.py
src/infrastructure/repository/mock/: mock_cat_message_repository.py  mock_db_handler.py  mock_users_conversation_history_repository.py
src/infrastructure/repository/openai/: openai_cat_message_repository.py
src/log/: logger.py
src/logger/: logger.py
src/presentation/: auth.py  error_response_body.py  sse.py
src/presentation/controller/: generate_cat_message_for_guest_user_controller.py
src/presentation/router/: cats.py
src/usecase/: db_handler_interface.py  generate_cat_message_for_guest_user_use_case.py
src/usecase/error/: create_messages_with_conversation_history_error.py
tests/db/: create_and_setup_db_connection.py  setup_test_database.py
tests/domain/cat/: test_get_prompt_by_cat_id.py
tests/domain/unique_id/: test_is_uuid_format.py
tests/infrastructure/google/: test_parse_gcs_path.py
tests/infrastructure/repository/aiomysql/aiomysql_guest_users_conversation_history/: test_create_messages_with_conversation_history.py  test_save_conversation_history.py
tests/infrastructure/repository/aiomysql/openai/openai_cat_message_repository/: test_generate_message_for_guest_user.py
tests/infrastructure/repository/gemini/gemini_video_repository/: test_analysis_video.py
tests/infrastructure/repository/google/google_video_transcript_repository/: test_create_video_transcript.py
tests/infrastructure/repository/guest_users_conversation_history/: test_create_messages_with_conversation_history.py  test_save_conversation_history.py
tests/infrastructure/repository/openai/openai_cat_message_repository/: test_generate_message_for_guest_user.py
tests/usecase/: test_generate_cat_message_for_guest_user_use_case.py
