[project]
name = "ai-cat-api"
version = "0.1.0"
description = "AI Meow Catで利用されるねこの人格をインプットしたLLM API"
authors = [
    { name = "keitakn", email = "keita.koga.work@gmail.com" }
]
dependencies = [
    "uvicorn>=0.29.0",
    "fastapi>=0.110.1",
    "openai>=1.16.2",
    "flake8>=7.0.0",
    "black>=24.3.0",
    "tiktoken>=0.6.0",
    "asyncio>=3.4.3",
    "aiomysql>=0.2.0",
    "pytest>=8.1.1",
    "mypy>=1.9.0",
    "asyncstdlib>=3.12.2",
    "pytest-env>=1.1.3",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.4.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_cat_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
env = [
    "IS_TESTING=1",
]
addopts = "-n auto"

[tool.mypy]
files = "src/"
python_version = "3.12"
ignore_missing_imports = true
