[project]
name = "ai-cat-api"
version = "0.1.0"
description = "AI Meow Catで利用されるねこの人格をインプットしたLLM API"
authors = [
    { name = "keitakn", email = "keita.koga.work@gmail.com" }
]
dependencies = [
    "uvicorn>=0.30.5",
    "fastapi>=0.112.0",
    "openai>=1.40.3",
    "tiktoken>=0.7.0",
    "asyncio>=3.4.3",
    "aiomysql>=0.2.0",
    "asyncstdlib>=3.12.4",
    "httpx>=0.27.0",
    "google-cloud-storage>=2.18.2",
    "google-cloud-aiplatform>=1.61.0",
    "google-cloud-speech>=2.27.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "mypy>=1.11.1",
    "pytest-env>=1.1.3",
    "pytest-xdist>=3.6.1",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.5.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_cat_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
env = [
    "IS_TESTING=1",
]
addopts = "-n auto"

[tool.mypy]
files = "src/"
python_version = "3.12"
ignore_missing_imports = true
