[project]
name = "ai-cat-api"
version = "0.1.0"
description = "AI Meow Catで利用されるねこの人格をインプットしたLLM API"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "aiomysql>=0.2.0",
    "asyncio>=3.4.3",
    "asyncstdlib>=3.13.0",
    "fastapi>=0.115.5",
    "ffmpeg-python>=0.2.0",
    "google-cloud-aiplatform>=1.72.0",
    "google-cloud-speech>=2.28.0",
    "google-cloud-storage>=2.18.2",
    "httpx>=0.27.2",
    "langsmith>=0.1.143",
    "openai>=1.54.4",
    "tiktoken>=0.8.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-env>=1.1.5",
    "pytest-xdist>=3.6.1",
    "ruff>=0.7.3",
]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
env = [
    "IS_TESTING=1",
]
addopts = "-n auto"

[tool.mypy]
files = "src/"
python_version = "3.12"
ignore_missing_imports = true
